--- a/src/output.css
+++ b/src/output.css
@@ -822,6 +822,7 @@ select {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   font-size: 1rem;
+  text-transform: capitalize;
   line-height: 1.5rem;
 }
 
@@ -943,6 +944,7 @@ select {
   padding-bottom: 1.25rem;
   text-align: start;
   font-weight: 600;
+  text-transform: capitalize;
   --tw-text-opacity: 1;
   color: rgb(8 18 66 / var(--tw-text-opacity));
 }
