--- a/output.css
+++ b/output.css
@@ -779,7 +779,9 @@ select {
   padding-bottom: 0.5rem;
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-  font-weight: 700;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 600;
   --tw-text-opacity: 1;
   color: rgb(79 140 229 / var(--tw-text-opacity));
 }
@@ -801,6 +803,8 @@ select {
   padding-bottom: 0.5rem;
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
   --tw-text-opacity: 1;
   color: rgb(8 18 66 / var(--tw-text-opacity));
 }
@@ -816,6 +820,36 @@ select {
   }
 }
 
+.cont-btn {
+  border-radius: 0.25rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(78 139 228 / var(--tw-bg-opacity));
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  text-align: center;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  --tw-shadow: 0 17px 35px 0px #CEDCF2;
+  --tw-shadow-colored: 0 17px 35px 0px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.cont-btn:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.cont-btn:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
 .menuitem1 {
   display: block;
   padding: 1rem;
@@ -826,19 +860,20 @@ select {
   line-height: 1.5rem;
 }
 
-.menuitem1:focus {
-  border-left-width: 4px;
-  --tw-border-opacity: 1;
-  border-color: rgb(78 139 228 / var(--tw-border-opacity));
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.menuitem1:active {
+  font-weight: 700;
 }
 
 .active.menuitem1 {
+  border-left-width: 4px;
+  --tw-border-opacity: 1;
+  border-color: rgb(78 139 228 / var(--tw-border-opacity));
   font-weight: 700;
   --tw-text-opacity: 1;
   color: rgb(79 140 229 / var(--tw-text-opacity));
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .menuactive1 {
@@ -884,7 +919,7 @@ select {
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 600;
-  text-transform: capitalize;
+  text-transform: none;
   --tw-text-opacity: 1;
   color: rgb(8 18 66 / var(--tw-text-opacity));
 }
@@ -893,7 +928,7 @@ select {
   font-size: 1.25rem;
   line-height: 1.75rem;
   font-weight: 600;
-  text-transform: capitalize;
+  text-transform: none;
   --tw-text-opacity: 1;
   color: rgb(8 18 66 / var(--tw-text-opacity));
 }
@@ -1101,12 +1136,20 @@ select {
   bottom: 0px;
 }
 
+.bottom-3 {
+  bottom: 0.75rem;
+}
+
 .bottom-\[2px\] {
   bottom: 2px;
 }
 
 .bottom-full {
   bottom: 100%;
+}
+
+.end-0 {
+  inset-inline-end: 0px;
 }
 
 .end-1 {
@@ -1524,6 +1567,11 @@ select {
   height: 0.875rem;
 }
 
+.size-5 {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
 .h-0 {
   height: 0px;
 }
@@ -1538,10 +1586,6 @@ select {
 
 .h-10 {
   height: 2.5rem;
-}
-
-.h-12 {
-  height: 3rem;
 }
 
 .h-24 {
@@ -1572,10 +1616,6 @@ select {
   height: 14rem;
 }
 
-.h-6 {
-  height: 1.5rem;
-}
-
 .h-60 {
   height: 15rem;
 }
@@ -1600,8 +1640,8 @@ select {
   max-height: 18rem;
 }
 
-.min-h-screen {
-  min-height: 100vh;
+.min-h-\[700px\] {
+  min-height: 700px;
 }
 
 .w-0 {
@@ -1640,6 +1680,14 @@ select {
   width: 66.666667%;
 }
 
+.w-2\/5 {
+  width: 40%;
+}
+
+.w-2\/6 {
+  width: 33.333333%;
+}
+
 .w-3 {
   width: 0.75rem;
 }
@@ -1648,12 +1696,24 @@ select {
   width: 0.875rem;
 }
 
+.w-3\/5 {
+  width: 60%;
+}
+
+.w-3\/6 {
+  width: 50%;
+}
+
 .w-4 {
   width: 1rem;
 }
 
 .w-4\/5 {
   width: 80%;
+}
+
+.w-4\/6 {
+  width: 66.666667%;
 }
 
 .w-48 {
@@ -1668,8 +1728,8 @@ select {
   width: 15px;
 }
 
-.w-\[1920px\] {
-  width: 1920px;
+.w-\[46px\] {
+  width: 46px;
 }
 
 .w-\[calc\(100\%-2rem\)\] {
@@ -1722,10 +1782,6 @@ select {
 
 .max-w-full {
   max-width: 100%;
-}
-
-.max-w-screen-2xl {
-  max-width: 1536px;
 }
 
 .max-w-xl {
@@ -1790,11 +1846,6 @@ select {
 
 .-translate-x-full {
   --tw-translate-x: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-0 {
-  --tw-translate-x: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -2378,10 +2429,10 @@ select {
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+.space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  margin-right: calc(2rem * var(--tw-space-x-reverse));
+  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-0 > :not([hidden]) ~ :not([hidden]) {
@@ -2928,6 +2979,11 @@ select {
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+
 .border-transparent {
   border-color: transparent;
 }
@@ -2981,6 +3037,11 @@ select {
   background-color: rgb(249 245 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#F9F9F9\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 249 249 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#aaa\] {
   --tw-bg-opacity: 1;
   background-color: rgb(170 170 170 / var(--tw-bg-opacity));
@@ -2994,11 +3055,6 @@ select {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100 {
@@ -3068,6 +3124,10 @@ select {
 .box-decoration-clone {
   -webkit-box-decoration-break: clone;
           box-decoration-break: clone;
+}
+
+.bg-contain {
+  background-size: contain;
 }
 
 .bg-cover {
@@ -3188,6 +3248,10 @@ select {
   padding: 0.375rem;
 }
 
+.p-12 {
+  padding: 3rem;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -3302,9 +3366,9 @@ select {
   padding-bottom: 0.75rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .py-\[0\.4rem\] {
@@ -3370,6 +3434,10 @@ select {
 
 .pt-3 {
   padding-top: 0.75rem;
+}
+
+.pt-36 {
+  padding-top: 9rem;
 }
 
 .\!text-left {
@@ -4055,8 +4123,10 @@ select {
   transition-duration: 150ms;
 }
 
-.duration-1000 {
-  transition-duration: 1000ms;
+.transition-transform {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .duration-150 {
@@ -4069,6 +4139,10 @@ select {
 
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.duration-700 {
+  transition-duration: 700ms;
 }
 
 .duration-\[350ms\] {
@@ -4221,11 +4295,6 @@ select {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-blue-400:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-blue-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
@@ -4249,6 +4318,10 @@ select {
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-800\/\[\.1\]:hover {
+  background-color: rgb(31 41 55 / .1);
 }
 
 .hover\:font-bold:hover {
@@ -4556,6 +4629,26 @@ select {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.active.hs-carousel-active\:border-blue-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(29 78 216 / var(--tw-border-opacity));
+}
+
+.active.hs-carousel-active\:bg-blue-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+
+.active .hs-carousel-active\:border-blue-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(29 78 216 / var(--tw-border-opacity));
+}
+
+.active .hs-carousel-active\:bg-blue-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+
 .selected.hs-selected\:block {
   display: block;
 }
@@ -4587,10 +4680,6 @@ select {
 }
 
 @media (min-width: 640px) {
-  .sm\:ml-24 {
-    margin-left: 6rem;
-  }
-
   .sm\:ml-3 {
     margin-left: 0.75rem;
   }
@@ -4611,10 +4700,6 @@ select {
     height: 16rem;
   }
 
-  .sm\:min-h-\[750px\] {
-    min-height: 750px;
-  }
-
   .sm\:w-1\/2 {
     width: 50%;
   }
@@ -4625,10 +4710,6 @@ select {
 
   .sm\:w-4\/12 {
     width: 33.333333%;
-  }
-
-  .sm\:max-w-2xl {
-    max-width: 42rem;
   }
 
   .sm\:max-w-\[604px\] {
@@ -4731,6 +4812,10 @@ select {
 
   .md\:w-2\/3 {
     width: 66.666667%;
+  }
+
+  .md\:w-2\/5 {
+    width: 40%;
   }
 
   .md\:w-auto {
@@ -4851,16 +4936,16 @@ select {
     height: 100vh;
   }
 
-  .lg\:w-1\/2 {
-    width: 50%;
-  }
-
   .lg\:w-2\/12 {
     width: 16.666667%;
   }
 
   .lg\:w-2\/6 {
     width: 33.333333%;
+  }
+
+  .lg\:w-3\/6 {
+    width: 50%;
   }
 
   .lg\:w-8\/12 {
@@ -4873,10 +4958,6 @@ select {
 
   .lg\:max-w-\[972px\] {
     max-width: 972px;
-  }
-
-  .lg\:max-w-screen-2xl {
-    max-width: 1536px;
   }
 
   .lg\:max-w-screen-xl {
@@ -4953,6 +5034,10 @@ select {
 }
 
 @media (min-width: 1280px) {
+  .xl\:left-24 {
+    left: 6rem;
+  }
+
   .xl\:h-80 {
     height: 20rem;
   }
@@ -4972,6 +5057,10 @@ select {
 }
 
 @media (min-width: 1536px) {
+  .\32xl\:left-52 {
+    left: 13rem;
+  }
+
   .\32xl\:max-w-\[1400px\] {
     max-width: 1400px;
   }
